Polish Cycle-Free